# easy-crud-api

./: .gitignore  Dockerfile  README.md  dagger.json  openapi.json  openapi.yaml  pyproject.toml
.dagger/: pyproject.toml
.dagger/src/task_tracker/: __init__.py  main.py
.github/workflows/: on-push.yaml
migrations/: env.py
migrations/versions/: f8e7abb6e275_initial_migration.py
src/: __main__.py  server.py
src/backend/: README.md  __main__.py  server.py
src/backend/errors/: tasks.py
src/backend/models/: common.py  tasks.py  users.py
src/backend/models/database/: __init__.py
src/backend/models/domain/: tasks.py
src/backend/models/internal/: tasks.py
src/backend/models/responses/: tasks.py
src/backend/repositories/tasks/: in_memory.py  interface.py  postgres.py
src/backend/repositories/users/: errors.py  in_memory.py  interface.py  postgres.py
src/backend/routers/: tasks.py  users.py
src/backend/services/: tasks.py
src/backend/settings/: container.py  settings.py
src/cmd/: openapi_gen.py
src/models/: tags.py  tasks.py  users.py
src/routers/: tags.py  tasks.py  users.py
tests/backend/integration/: conftest.py  test_root.py
tests/backend/integration/tasks/: test_create.py  test_delete.py  test_get.py  test_list.py  test_update.py
tests/backend/unit/: conftest.py
tests/backend/unit/repositories/: test_users.py
