[project]
name = "task-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.48.2",
    "fastapi>=0.119.0",
    "pydantic-settings>=2.11.0",
    "pydantic>=2.12.3",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "types-pyyaml>=6.0.12.20250915",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "faker>=37.11.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]
